--- a/RTSSSharedMemoryNET/RTSSSharedMemoryNET.vcxproj
+++ b/RTSSSharedMemoryNET/RTSSSharedMemoryNET.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -28,28 +28,28 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CLRSupport>true</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
@@ -71,8 +71,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)\bin\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)\bin\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>BestRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -80,13 +80,13 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>BestRules.ruleset</CodeAnalysisRuleSet>
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(ProjectDir)\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)\bin\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)\bin\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)\bin\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)\bin\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>BestRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -94,8 +94,8 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <CodeAnalysisRuleSet>BestRules.ruleset</CodeAnalysisRuleSet>
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(ProjectDir)\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
+    <OutDir>$(ProjectDir)\bin\$(PlatformShortName)\bin\$(Configuration)\</OutDir>
+    <IntDir>$(ProjectDir)\bin\$(PlatformShortName)\obj\$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -164,15 +164,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Include\RTSSHooksTypes.h" />
+    <ClInclude Include="Include\RTSSSharedMemory.h" />
     <ClInclude Include="Structs.h" />
-    <ClInclude Include="RTSSSharedMemory.h" />
-    <ClInclude Include="OSD.h" />
+    <ClInclude Include="Osd.h" />
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="Utilities.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="OSD.cpp" />
+    <ClCompile Include="Osd.cpp" />
     <ClCompile Include="Stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
